# pete

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pete/: cache.py  cli_utils.py  config.py  main.py  retrieval_qa.py
pete/chains/: obsidian.py
pete/chains/obsidian/: __init__.py  chain.py  loader.py  retriever.py  vectorstore.py
tests/test_obsidian/: test_loader.py
tests/test_obsidian/notes/: Bikeshedding.md  Concurrent Computing.md  Density-Based Clustering.md  Focaccia.md  Man in a Hole - Story Shape for Interviews.md
